[project]
authors = [
    {name = "Jean-Pierre Chauvel", email = "jean.p.chauvel@gmail.com"},
]
license = {text = "CC0"}
requires-python = "<4.0,>=3.11"
dependencies = []
name = "grokking"
version = "0.1.0"
description = "Grokking Algorithms lab"
readme = "README.md"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.12.0",
    "isort<6.0.0,>=5.13.2",
]

[tool.black]
line-length = 79
